Changelog 0.7.0.4
-----------------
[SA-00425] Sally: empty logfile on startup if it is to big (for beta users)


Changelog 0.7.0.3
-----------------
[SA-00421] SallyAPI: where possible CPopUp windows should react on a click to the lightbox
+ CAbout
+ CAlarmPopUp
+ CFacebookConfig
[NO-TICKET] SallyAPI: extended the CAmazonInfo DVD result
[SA-00422] SallyAPI: the FileHelper returns not the correct local time
[SA-00199] MediaPlayer: automatic playlist history - EXT
+ You can select if the current playlist is replaced or the new is attached to the current. This setting is restored after restart.
+ Problem with getting the correct album names
+ Restoring selected playlist after restart


Changelog 0.7.0.2
-----------------
[NO-TICKET] SallyAPI: fixed some minor issues with the CFileBrowser class
[SA-00416] MediaPlayer: "info" feld layout
[NO-TICKET] MediaPlayer: Crash while cleaning up
[SA-00418] MediaPlayer: id3 tag - edit tags if no tag is present is not working


Changelog 0.7.0.1
-----------------
[NO-TICKET] fixed many small and big bugs all over the complete application
[NO-TICKET] many not documented improvements
[NO-TICKET] MediaPlayer: improved the cover loading speed on slow hardware
[SA-00402] MediaPlayer: add the album to the search results and favorites view
[NO-TICKET] the facebook status is persited on the client for one month (before it was only one week)
[SA-00403] SallyAPI: MS_SALLY_MUTE_SOUND / MS_SALLY_UNMUTE_SOUND: the message send to the app should be a different than the message send to sally
[SA-00404] ImageBrowser: change the second field from CEdit to CNumberSelector
[SA-00396] MediaPlayer: several small suggestions
+ facebook pop-up notifyer - send message after 50% played
+ edit ID3-tags in the application
[NO-TICKET] MediaPlayer / ImageBrowser: increased history to 40
[SA-00400] SallyAPI: logger should use critical section for writing to files
[SA-00406] SallyAPI: PopUp options - close on any click